Update downloadObject test to compare strings content instead of bytes